# lovemirror

./: AI_SERVICE_SETUP.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_MIGRATION_SUMMARY.md  README.md  SCHEMA_FIXES_SUMMARY.md  STREAMLIT_CLEANUP_SUMMARY.md  index.html  package-lock.json  package.json  setup_azure_env.ps1  test-permissions.js  test-schema-consistency.js  tsconfig.app.tsbuildinfo
.bolt/supabase_discarded_migrations/: 20250522171650_polished_sky.sql  20250522172318_blue_pine.sql  20250522173107_young_snowflake.sql  20250522173643_dark_island.sql  20250522191437_wispy_frost.sql  20250522194401_flat_summit.sql  20250522195154_curly_limit.sql  20250522202903_delicate_glitter.sql  20250523022254_morning_mud.sql  20250523024017_summer_butterfly.sql  20250523032051_falling_violet.sql  20250523032845_floral_heart.sql  20250523035155_turquoise_paper.sql  20250525182508_shiny_bar.sql  20250525182607_broken_tree.sql  20250525182711_emerald_credit.sql  20250526020123_pale_firefly.sql  20250526021155_smooth_thunder.sql  (+6 more)
.devcontainer/: devcontainer.json
ai_service/: .gitignore  AZURE_DEPLOYMENT_README.md  Dockerfile  STREAMLIT_CLOUD_DEPLOYMENT.md  app.py  app_final.py  app_simple.py  env.example  pyproject.toml  requirements.txt  requirements_azure.txt  requirements_simple.txt  requirements_streamlit_cloud.txt  setup.sh  start.sh  start_service.sh  startup.sh  startup.txt  streamlit_app.py  test_azure_deployment.py  test_hybrid_system.py  test_simple_deployment.py  web.config
ai_service/.azure/: config.yml
public/: site.webmanifest
src/: App.tsx  main.tsx  package.json
(+102 files in other folders)
