[tool.poetry]
name = "lovemirror-ai-service"
version = "0.1.0"
description = "AI Relationship Mentor Backend Service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^2.3.0"
flask-cors = "^4.0.0"
gunicorn = "^20.1.0"
streamlit = "^1.28.0"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
openai = "^1.0.0"
PyPDF2 = "^3.0.0"
pypdf = "^3.0.0"
tiktoken = "^0.5.1"
chromadb = "^0.4.0"
sentence-transformers = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 